# DSDE

./: .gitignore  README.md  configure.ac
src/: Makefile.am
src/dsfm/: Makefile.am
src/dsterm/: Makefile.am  main.c
src/dswm/: Makefile.am  dswm.1  dswm.h  error.c  handler.c  main.c  wm.c
